# line-sticker-to-whatsapp

./: LICENSE.txt  README.md  pyproject.toml
line_sticker_for_whatsapp/: __about__.py  __init__.py  __main__.py  sticker.py
line_sticker_for_whatsapp/cli/: __init__.py
