[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "line-sticker-for-whatsapp"
description = ''
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "Shivelight", email = "shivelight@tuta.io" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "click",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/Shivelight/line-sticker-for-whatsapp"
Issues = "https://github.com/Shivelight/line-sticker-for-whatsapp/issues"
Source = "https://github.com/Shivelight/line-sticker-for-whatsapp"

[project.scripts]
line-sticker-for-whatsapp = "line_sticker_for_whatsapp.cli:line_sticker_for_whatsapp"

[tool.hatch.version]
path = "line_sticker_for_whatsapp/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=line_sticker_for_whatsapp --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "line_sticker_for_whatsapp/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
